# telegram-bot-service

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/bot/: commands.rs  handler.rs  mod.rs
src/config/: mod.rs
src/error/: mod.rs
