[package]
name = "tg-bot-service"
version = "0.1.0"
edition = "2024"
authors = ["xCult"]

[dependencies]
# Telegram Bot Framework
teloxide = { version = "0.17", features = ["macros"] }

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

# Environment variables config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true